--- a/appsett.env
+++ b/appsett.env
@@ -4,10 +4,11 @@
 #PANUSOMXML2EDL_DAYS_OLD={Enter Max Day Old to Filter Entries, Default: 0 (Unlimited)}
 #PANUSOMXML2EDL_LIMIT_COUNT={Enter Limit Count to Filter Entries, Default: 0 (Unlimited)}
 #PANUSOMXML2EDL_NO_SORT={Enter Either TRUE or FALSE to Skip Sorting XML Entries, Default: FALSE}
+#PANUSOMXML2EDL_SINGLE_OUTPUT={Enter Either TRUE or FALSE to Create Single Output Without Any Parsing, Default: FALSE}
 
 # Advanced & Expert Options:
 
 #PANUSOMXML2EDL_LOG_SILENCE={Enter Either TRUE or FALSE to Enable Verbose Log Suppression, Default: FALSE}
+#PANUSOMXML2EDL_LOG_UNPARSABLE={Enter Either TRUE or FALSE to Log Each Unparsable Record, Default: FALSE}
 #PANUSOMXML2EDL_SKIP_VERIFY={Enter Either TRUE or FALSE to Skip TLS Certificate Verification, Default: FALSE}
-#PANUSOMXML2EDL_MULTI_THREAD={Enter Either TRUE or FALSE to Enable Parallel Processing, Default: FALSE}
 #PANUSOMXML2EDL_FILE_TEST={Enter Either TRUE or FALSE to Run Offline Test from "url-list.xml" File, Default: FALSE}
