v2 release add-ons

--- a/appsett.env
+++ b/appsett.env
@@ -11,4 +11,4 @@
 #PANUSOMXML2EDL_LOG_SILENCE={Enter Either TRUE or FALSE to Enable Verbose Log Suppression, Default: FALSE}
 #PANUSOMXML2EDL_LOG_UNPARSABLE={Enter Either TRUE or FALSE to Log Each Unparsable Record, Default: FALSE}
 #PANUSOMXML2EDL_SKIP_VERIFY={Enter Either TRUE or FALSE to Skip TLS Certificate Verification, Default: FALSE}
-#PANUSOMXML2EDL_FILE_TEST={Enter Either TRUE or FALSE to Run Offline Test from "url-list.xml" File, Default: FALSE}
+#PANUSOMXML2EDL_FILE_TEST={Enter Either TRUE or FALSE to Run Offline Test from url-list.xml File, Default: FALSE}
