Custom timeout feature implemented for connection duration.

--- a/appsett.env
+++ b/appsett.env
@@ -1,14 +1,15 @@
 # Basic & Optional Settings:
 
-#PANUSOMXML2EDL_FEED_URL={Enter URL of USOM XML OSINT Feed, Default: https://www.usom.gov.tr/url-list.xml}
-#PANUSOMXML2EDL_DAYS_OLD={Enter Max Day Old to Filter Entries, Default: 0 (Unlimited)}
-#PANUSOMXML2EDL_LIMIT_COUNT={Enter Limit Count to Filter Entries, Default: 0 (Unlimited)}
-#PANUSOMXML2EDL_NO_SORT={Enter Either TRUE or FALSE to Skip Sorting XML Entries, Default: FALSE}
-#PANUSOMXML2EDL_SINGLE_OUTPUT={Enter Either TRUE or FALSE to Create Single Output Without Any Parsing, Default: FALSE}
+#PANUSOMXML2EDL_FEED_URL={Enter URL of USOM XML OSINT feed, Default: https://www.usom.gov.tr/url-list.xml}
+#PANUSOMXML2EDL_DAYS_OLD={Enter max days old to filter entries, Default: 0 (Unlimited)}
+#PANUSOMXML2EDL_LIMIT_COUNT={Enter limit count to filter entries, Default: 0 (Unlimited)}
+#PANUSOMXML2EDL_NO_SORT={Enter either TRUE or FALSE to skip sorting XML entries, Default: FALSE}
+#PANUSOMXML2EDL_SINGLE_OUTPUT={Enter either TRUE or FALSE to create single output without any parsing, Default: FALSE}
 
 # Advanced & Expert Options:
 
-#PANUSOMXML2EDL_LOG_SILENCE={Enter Either TRUE or FALSE to Enable Verbose Log Suppression, Default: FALSE}
-#PANUSOMXML2EDL_LOG_UNPARSABLE={Enter Either TRUE or FALSE to Log Each Unparsable Record, Default: FALSE}
-#PANUSOMXML2EDL_SKIP_VERIFY={Enter Either TRUE or FALSE to Skip TLS Certificate Verification, Default: FALSE}
-#PANUSOMXML2EDL_FILE_TEST={Enter Either TRUE or FALSE to Run Offline Test from url-list.xml File, Default: FALSE}
+#PANUSOMXML2EDL_LOG_SILENCE={Enter either TRUE or FALSE to enable verbose log suppression, Default: FALSE}
+#PANUSOMXML2EDL_LOG_UNPARSABLE={Enter either TRUE or FALSE to log each unparsable record, Default: FALSE}
+#PANUSOMXML2EDL_SKIP_VERIFY={Enter either TRUE or FALSE to skip TLS certificate verification, Default: FALSE}
+#PANUSOMXML2EDL_FILE_TEST={Enter either TRUE or FALSE to run offline test from url-list.xml File, Default: FALSE}
+#PANUSOMXML2EDL_TIMEOUT_DURATION={Enter timeout value in seconds to limit connection duration, Default: 60}
